# pipeline

./: '  .bash_history  .script2.sh.swp  .viminfo  CMakeLists.txt  Jenkins_key.txt  Jenkins_key.txt.pub  README.md  backup.sh  new_file1.txt  script2.sh
.config/jgit/: config
.ssh/: authorized_keys
.vim/: .netrwhist
Linux_practice/: configuration_file  data.txt  file3.txt  log_file  output.txt  user_details.txt
backup_Dir/Linux_practice/: file1.txt
src/: main.c
test_folder/: CMakeLists.txt
